<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:longClickable="true"
                                                   android:background="#EFBECE">

    <TextView
            android:layout_width="138dp"
            android:layout_height="27dp" android:id="@+id/textCurrentPhone"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="39dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="19dp" android:layout_marginStart="19dp" android:textSize="16sp"
            android:textColor="#050505" android:fontFamily="casual"/>
    <TextView
            android:text="@string/current_phone"
            android:layout_width="225dp"
            android:layout_height="25dp" android:id="@+id/textViewTitleCurrent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="14dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="19dp" android:layout_marginStart="19dp" android:textColor="#070000"
            android:textStyle="bold" android:fontFamily="casual"/>
    <ListView
            android:layout_width="395dp"
            android:layout_height="289dp"
            android:id="@+id/listViewCurrent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="76dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:longClickable="true"
            android:clickable="true" android:focusable="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewSubtotalCurrent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="368dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp" android:textColor="#050505"
            android:fontFamily="casual" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTax"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="400dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp" android:textColor="#0C0C0C"
            android:fontFamily="casual" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewOrderTotal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="388dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="312dp" android:layout_marginStart="312dp" android:fontFamily="casual"
            android:textColor="#673AB7" android:textStyle="bold" android:textSize="18sp"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="161dp"
            android:layout_height="47dp" android:id="@+id/buttonPlaceOrder"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="428dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="208dp" android:layout_marginStart="208dp" android:onClick="onPlaceOrderClick"/>
    <Button
            android:text="@string/remove_pizza"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="428dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/buttonRemovePizza"
            android:onClick="onClickButtonRemove"/>
    <TextView
            android:text="@string/order_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="388dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="208dp" android:layout_marginStart="208dp" android:textColor="#673AB7"
            android:textStyle="bold" android:textAllCaps="false" android:textSize="16sp" android:fontFamily="casual"/>
    <TextView
            android:text="@string/sales_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewSalesTax"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="400dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="28dp" android:layout_marginStart="28dp" android:fontFamily="casual"
            android:textColor="#0B0A0A"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewSubtotal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="372dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:fontFamily="casual"
            android:textColor="#0B0A0A"/>
</androidx.constraintlayout.widget.ConstraintLayout>