<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".backend.MainActivity" android:background="#D6D7D7">
    <TextView
            android:text="@string/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="casual" android:textSize="28sp" android:textStyle="bold"
            android:textAllCaps="true" android:textColor="#7E241D" android:id="@+id/textViewWelcome"
            app:layout_constraintHorizontal_bias="0.428"/>
    <ImageButton
            android:layout_width="141dp"
            android:layout_height="132dp" app:srcCompat="@drawable/deluxepic" android:id="@+id/imageButtonDeluxe"
            android:contentDescription="@string/deluxe"
            android:adjustViewBounds="false" android:scaleType="centerInside"
            android:onClick="onClickDeluxe"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="91dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"/>
    <TextView
            android:text="@string/deluxe"
            android:layout_width="182dp"
            android:layout_height="22dp" android:id="@+id/textViewDeluxe"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" android:textStyle="bold|italic" android:fontFamily="casual"
            android:textColor="#070101" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="216dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"/>
    <ImageButton
            android:layout_width="143dp"
            android:layout_height="147dp" app:srcCompat="@drawable/hawaiianpic" android:id="@+id/imageButtonHawaiian"
            android:scaleType="centerInside" android:contentDescription="@string/hawaiian"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="252dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" android:onClick="onClickHawaiian"/>
    <TextView
            android:text="@string/hawaiian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewHawaiian"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold|italic" android:fontFamily="casual" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="388dp" android:textColor="#050202"/>
    <ImageButton
            android:layout_width="142dp"
            android:layout_height="136dp" app:srcCompat="@drawable/pepperonipic" android:id="@+id/imageButtonPepperoni"
            android:scaleType="centerInside" android:contentDescription="@string/pepperoni"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="420dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" android:onClick="onClickPepperoni"/>
    <TextView
            android:text="@string/pepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewPepperoni"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="casual"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="548dp" android:textColor="#020101"/>
    <ImageButton
            android:layout_width="96dp"
            android:layout_height="86dp" app:srcCompat="@drawable/storeorders" android:id="@+id/imageButtonStoreOrders"
            android:scaleType="fitCenter" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="352dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="276dp"
            android:layout_marginStart="276dp" android:contentDescription="@string/store_orders"
            android:onClick="onClickStoreOrders"/>
    <ImageButton
            android:layout_width="92dp"
            android:layout_height="85dp" app:srcCompat="@drawable/currentorder"
            android:id="@+id/imageButtonCurrentOrder"
            android:scaleType="centerInside" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="276dp" android:layout_marginEnd="31dp" android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="272dp" android:layout_marginStart="272dp"
            android:contentDescription="@string/current_order" app:layout_constraintHorizontal_bias="0.75"
            android:onClick="onClickCurrentOrder"/>
    <TextView
            android:text="@string/store_orders"
            android:layout_width="127dp"
            android:layout_height="30dp" android:id="@+id/textViewStoreOrder"
            android:textSize="16sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="428dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="276dp" android:layout_marginStart="276dp" android:fontFamily="casual"
            android:textColor="#050505" android:textStyle="bold"/>
    <TextView
            android:text="@string/current_order"
            android:layout_width="102dp"
            android:layout_height="22dp" android:id="@+id/textViewCurrentOrder"
            android:textSize="16sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="260dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="284dp" android:layout_marginStart="284dp" android:textColor="#090808"
            android:fontFamily="casual" android:textStyle="bold"/>
    <EditText
            android:layout_width="162dp"
            android:layout_height="51dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/textPhoneNumber"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="140dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="232dp" android:layout_marginStart="232dp" android:hint="@string/phone_number"
            android:fontFamily="casual" android:importantForAutofill="no"/>

</androidx.constraintlayout.widget.ConstraintLayout>