<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#BAE9EF">

    <TextView
            android:text="@string/store_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewStoreOrders"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="120dp" android:layout_marginStart="120dp" android:textColor="#131313"
            android:textAllCaps="true" android:textStyle="bold" android:textSize="24sp"/>
    <ListView
            android:layout_width="396dp"
            android:layout_height="418dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp" android:layout_marginTop="108dp"
            android:id="@+id/listViewStoreOrders"/>
    <Button
            android:text="@string/cancel_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonCancelOrder"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="536dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:onClick="onClickCancelButton"/>
    <Spinner
            android:layout_width="209dp"
            android:layout_height="32dp" android:id="@+id/spinnerPhoneNumber"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"/>
    <TextView
            android:text="@string/order_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTotal2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="551dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="175dp" android:layout_marginStart="175dp" android:textColor="#090808"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewSum"
            android:textStyle="bold" android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="549dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="261dp"
            android:layout_marginStart="261dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>